Fallback to java 8